--- a/src/web/wynn/item/mythic/styles.css
+++ b/src/web/wynn/item/mythic/styles.css
@@ -123,7 +123,8 @@ footer {
 }
 
 .item-card {
-    background-color: white;
+    background-color: #333;
+    color: white;
     border-radius: 8px;
     padding: 20px;
     margin: 15px;
